--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -383,13 +383,15 @@ jobs:
           echo "📋 Test 2: POST Transaction to EVM"
           
           PAYLOAD='{
-            "blockchain": "EVM",
-            "network": "ethereum",
-            "transaction_type": "transfer",
-            "from_address": "0x742d35Cc6634C0532925a3b844Bc9e7595f0bEb",
-            "to_address": "0x8626f6940E2eb28930eFb4CeF49B2d1F2C9C1199",
-            "amount": "1.5",
-            "currency": "ETH"
+            "chain_type": "EVM",
+            "operation_type": "transfer",
+            "payload": {
+              "network": "ethereum",
+              "from_address": "0x742d35Cc6634C0532925a3b844Bc9e7595f0bEb",
+              "to_address": "0x8626f6940E2eb28930eFb4CeF49B2d1F2C9C1199",
+              "amount": "1.5",
+              "currency": "ETH"
+            }
           }'
           
           RESPONSE=$(curl -s -w "\n%{http_code}" \
@@ -401,11 +403,11 @@ jobs:
           BODY=$(echo "$RESPONSE" | head -n1)
           
           if [ "$HTTP_CODE" -eq 200 ] || [ "$HTTP_CODE" -eq 202 ]; then
-            if echo "$BODY" | grep -q "message_id"; then
+            if echo "$BODY" | grep -q "operation_id"; then
               echo "✅ Transaction submitted successfully"
               echo "$BODY"
             else
-              echo "❌ Response missing message_id"
+              echo "❌ Response missing operation_id"
               echo "$BODY"
               exit 1
             fi
@@ -455,13 +457,15 @@ jobs:
           echo "📋 Test 4: POST Transaction to Bitcoin"
           
           PAYLOAD='{
-            "blockchain": "Bitcoin",
-            "network": "mainnet",
-            "transaction_type": "transfer",
-            "from_address": "1A1zP1eP5QGefi2DMPTfTL5SLmv7DivfNa",
-            "to_address": "3J98t1WpEZ73CNmYviecrnyiWrnqRhWNLy",
-            "amount": "0.001",
-            "currency": "BTC"
+            "chain_type": "BTC",
+            "operation_type": "transfer",
+            "payload": {
+              "network": "mainnet",
+              "from_address": "1A1zP1eP5QGefi2DMPTfTL5SLmv7DivfNa",
+              "to_address": "3J98t1WpEZ73CNmYviecrnyiWrnqRhWNLy",
+              "amount": "0.001",
+              "currency": "BTC"
+            }
           }'
           
           RESPONSE=$(curl -s -w "\n%{http_code}" \
@@ -513,7 +517,7 @@ jobs:
           RESPONSE=$(curl -s -w "\n%{http_code}" \
             -X POST "https://lj2vv3cmj1.execute-api.us-east-1.amazonaws.com/transaction" \
             -H "Content-Type: application/json" \
-            -d '{"blockchain":"EVM"}')
+            -d '{"chain_type":"EVM"}')
           
           HTTP_CODE=$(echo "$RESPONSE" | tail -n1)
           
